--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url("../img/hero-banner_Mesa\ de\ trabajo\ 1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -36,4 +36,12 @@ body {
     width: 100px;
   }
 
+}
+
+/* COLOR ESPECIAL */
+.yellow{
+  color: #fec926;
+}
+.grey{
+  color: #191a18;
 }
