--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -60,29 +60,33 @@ nav .class-nav:visited{
 }
 
 /* MIS TRABAJOS */
-#Mis-trabajos .image-top {
-  height: 250px;
+.mis-trabajos .image-top{
+  height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-#Mis-trabajos h5{
+.mis-trabajos h5{
   color: #fec926;
 }
 
-#Mis-trabajos .image-top:hover{
+.mis-trabajos .image-top:hover{
   opacity: 0.7;
 }
 
-#Mis-trabajos .card{
-  border-radius: 30px;
+.mis-trabajos .card{
+  border-radius: 35px;
 }
 
-#Mis-trabajos .image-top{
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  border-bottom: #fec926 20px solid;
+.mis-trabajos .image-top{
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+  border-bottom: #fec926 10px solid;
+}
+
+.mis-trabajos p{
+  font-size: 0.85rem;
 }
 
 /* FORM CONTACTO */
