accordion textos y colores

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -125,12 +125,33 @@ nav .class-nav:visited{
   background-color: #fec926;
 }
 
+.backgryl{
+  background-color: #fffbf1;
+}
+
 /* PADDING SECTION */
 .padd-section{
   padding-top:  15vh;
 }
 
-/* CAROUSEL */
-.carousel-item h5{
-  font-size: 6rem;
+/* ACCORDION */
+.accordion-item{
+  background-color: #fec926;
+  color: #fff;
 }
+
+.efect-hover:hover{
+  background-color: #191a18;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.acc-title{
+  padding: 3vh;
+  background-color: #191a18;
+  font-size: 1rem;
+}
+
+
+
