corrección acceso portafolio desde index

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -182,5 +182,15 @@ nav .class-nav:visited{
 /* MI PORTAFOLIO */
 .mi-portafolio a{
   text-decoration: none;
+  color: #191a18;
+}
+
+.mi-portafolio .btn{
+  text-decoration: none;
   color: #fec926;
+}
+
+.mi-portafolio .btn:hover{
+  text-decoration: none;
+  color: #fff;
 }
