--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -211,3 +211,20 @@ nav .class-nav:visited{
   text-decoration: none;
   color: #fff;
 }
+
+/* FOOTER */
+footer a{
+  text-decoration: none;
+  color: #191a18;
+}
+
+footer a:visited{
+  text-decoration: none;
+}
+
+footer a:hover{
+  text-decoration: none;
+  color: #191a18;
+  opacity: 0.8;
+  font-weight: 900;
+}
