--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -83,8 +83,8 @@ nav .class-nav:visited{
   border-radius: 50px;
 }
 
-/* MIS TRABAJOS */
-.mis-trabajos .image-top{
+/* MIS PROYECTOS */
+.mis-proyectos .image-top{
   height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
